--- a/css/gift.css
+++ b/css/gift.css
@@ -1,6 +1,6 @@
 .gift {
     border-top: 1px solid #e3e1d6;
-    background-image: url(img/bg_pattern.png);
+    background-image: url(../img/bg_pattern.png);
     background-repeat: repeat;
 }
 
