--- a/css/index.css
+++ b/css/index.css
@@ -195,7 +195,7 @@
 
 .main #event {
     border-top: 1px solid #e3e1d6;
-    background-image: url(img/bg_pattern.png);
+    background-image: url(../img/bg_pattern.png);
     background-repeat: repeat;
 }
 
@@ -298,7 +298,7 @@
 
 .footer #bg_message {
     border-top: 1px solid #e3e1d6;
-    background-image: url(img/bg_pattern.png);
+    background-image: url(../img/bg_pattern.png);
     background-repeat: repeat;
 }
 
