--- a/css/moviedetails.css
+++ b/css/moviedetails.css
@@ -1,6 +1,6 @@
 .movie_detail {
     font-size: 14px;
-    background-image: url(img/bg_pattern.png);
+    background-image: url(../img/bg_pattern.png);
     background-repeat: repeat;
 }
 
